--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^1.6.2",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
-    "view-design": "^4.2.0",
+    "material-design-icons": "^3.0.1",
+    "muse-ui": "^3.0.2",
+    "muse-ui-toast": "^0.3.0",
+    "typeface-roboto": "^1.1.13",
+    "vant": "^2.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
     "vuex": "^3.4.0"
@@ -20,12 +23,8 @@
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-import": "^1.13.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^8.0.2",
+    "babel-plugin-import": "^1.13.1",
+    "less-loader": "^6.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
