--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "eslint": "^7.15.0",
     "material-design-icons": "^3.0.1",
     "muse-ui": "^3.0.2",
     "muse-ui-toast": "^0.3.0",
@@ -23,6 +24,9 @@
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "babel-eslint": "^10.1.0",
+    "babel-polyfill": "^6.26.0",
     "babel-plugin-import": "^1.13.1",
     "less-loader": "^6.1.1",
     "vue-template-compiler": "^2.6.11"
