--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vant": "^2.10.7",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "js-cookie": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
